fixed bug in sorting, fixed shortcuts when video collapsed

--- a/frontend/src/css/_detail.scss
+++ b/frontend/src/css/_detail.scss
@@ -147,7 +147,7 @@
   height:32px;
   padding:0px 2px;
   background:transparentize($primary-color-dark, .2);
-  z-index:99;
+  z-index:2;
 
   .progress{
     position: absolute;
